syntax = "proto3";

package Protocol;
option csharp_namespace = "Google.Protobuf.Protocol";

import public "Enum.proto";
import public "Struct.proto";

message S_Connected 
{
}

message C_MakeRoom
{
	MyRoomInfo myRoomInfo = 1;
}

message S_MakeRoom
{
	MyRoomInfo myRoomInfo = 1;
}

message C_EnterRoom
{
	MyRoomInfo myRoomInfo = 1;
}

message S_EnterRoom
{
	MyRoomInfo myRoomInfo = 1;
}

message C_DestroyRoom
{
	MyRoomInfo myRoomInfo = 1;
}

message S_DestroyRoom
{
	MyRoomInfo myRoomInfo = 1;
}

message C_EnterGame 
{
	MyRoomInfo MyRoomInfo = 1;
}

message S_EnterGame 
{
	MyHeroInfo myHeroInfo = 1;
	MyRoomInfo MyRoomInfo = 2;
	bool respawn = 3;
}

message S_LeaveGame
{

}

message S_Spawn 
{
	repeated HeroInfo heroes = 1;
}

message S_Despawn 
{
	repeated int32 objectIds = 1;
}

message C_Move 
{
	PositionInfo posInfo = 1;
}

message S_Move 
{
	int32 objectId = 1;
	PositionInfo posInfo = 2;
}